Bug 383958 - Changing password returns that it was unable to change it, but changes anyway
Summary: Changing password returns that it was unable to change it, but changes anyway
Status: RESOLVED FIXED
Alias: None
Product: kgpg
Classification: Applications
Component: general (other bugs)
Version First Reported In: 17.04
Platform: openSUSE Linux
: NOR minor
Target Milestone: ---
Assignee: Rolf Eike Beer
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-08-24 14:57 UTC by Stanislav
Modified: 2017-10-18 17:08 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 17.08.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Stanislav 2017-08-24 14:57:46 UTC
Hi,
When changing password in KGpg the dialog let's you change it, but after displays popup with error saying that it was unable to change it although it in fact changes the password. Probably just a wrong return value.
Comment 1 Rolf Eike Beer 2017-10-18 17:08:35 UTC
Git commit 9b88ec6a7b9048476abb98076c96f63cc3d6e38f by Rolf Eike Beer.
Committed on 18/10/2017 at 17:04.
Pushed by dakon into branch 'Applications/17.08'.

do not flag sequence errors when using pinentry for changing passwords
FIXED-IN:17.08.3

M  +22   -7    transactions/kgpgchangepass.cpp
M  +2    -1    transactions/kgpgchangepass.h

https://commits.kde.org/kgpg/9b88ec6a7b9048476abb98076c96f63cc3d6e38f
Comment 2 Rolf Eike Beer 2017-10-18 17:08:35 UTC
Git commit b0cbbdd314a0a1eed3cc5b6c6ff9ad433cfdc2d0 by Rolf Eike Beer.
Committed on 18/10/2017 at 17:04.
Pushed by dakon into branch 'Applications/17.08'.

do not show message when password changing ends successfully

The transaction may as well end successfully when the user aborted the pinentry
dialogs multiple times, which is indistinguishable from a "real" success. So do
not show a probably wrong message.

M  +2    -1    keyinfodialog.cpp

https://commits.kde.org/kgpg/b0cbbdd314a0a1eed3cc5b6c6ff9ad433cfdc2d0