do not flag sequence errors when using pinentry for changing passwords

BUG:383958
FIXED-IN:17.08.3